# Templar

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  makefile  nginx.conf
build_index/: builder.c
docker/: Dockerfile
src/: builder.c  fraud.c  fraud.h  http.c  http.h  index.c  index.h  json_parse.c  json_parse.h  main.c  templar.h  vectorize.c  vectorize.h
test/: results.json
